# MATRIX

./: .env.example  .gitignore  Dockerfile  HANDOFF.md  HOW_TO_RUN.txt  README.md  RUN_ON_NEW_MAC.sh  Start MATRIX.command  _brain_client.py  brain_bus_publisher.py  docker-compose.prod.yml  docker-compose.yml  harmony_publisher_base.py  matrix_brain_hooks.py  provenance_writer.py  pyproject.toml  schema.sql  setup.sh
deploy/: nginx-matrix.conf
docs/: CODE_REVIEW.md  ERD.txt  PRODUCTION.md
examples/: group_map.json
matrix/: __init__.py  __main__.py  api.py  backup.py  config.py  daemon.py  db.py  dedup_engine.py  doctor.py  events.py  hasher.py  lineage_resolver.py  logging_config.py  macos_app.py  macos_launcher.py  main.py  preview.py  quarantine_handler.py  reveal.py  review_queue.py  scanner.py  security.py  services.py  settings.py  watcher.py
matrix/web/static/: app.js  index.html  style.css
scripts/: backup-catalog.sh  build-macos-app.sh  ensure-venv.sh  friend-setup.sh  install-launchd.sh  open-ui.sh  package-for-friend.sh  production-setup.sh  run-pipeline.sh  run-server.sh
tests/: conftest.py  test_dedup.py  test_doctor.py  test_harmony_publisher_base.py  test_security.py
