[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matrix-archive"
version = "1.2.0"
description = "Standalone photo archive intelligence: catalog, dedup, lineage, human review"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MATRIX" }]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "rich>=13.7",
  "imagehash>=4.3",
  "Pillow>=10.2",
  "imagededup>=0.3.2",
  "watchdog>=4.0",
  "python-multipart>=0.0.9",
  "aiofiles>=23.2",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
raw = ["rawpy>=0.19", "numpy>=1.26"]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
matrix = "matrix.main:app_entry"

[tool.setuptools.packages.find]
where = ["."]
include = ["matrix*"]

[tool.setuptools.package-data]
matrix = ["web/static/*"]